# mcp_server_gdb

./: .cursorrules  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Makefile  README.ko.md  README.md  flake.nix
.claude/skills/gdb-mcp/: SKILL.md  tool-reference.md
.cursor/rules/: gdb-mcp.mdc
configs/: gef.rc
crates/mcp_server_gdb_macros/: Cargo.toml
crates/mcp_server_gdb_macros/src/: lib.rs
docs/: gdb-mcp-canonical.md
nix/: home-manager-module.nix
patches/: 0001-gef-fix-read-permission-check-for-cached-temp-files.patch
scripts/: gef_json.py
src/: config.rs  error.rs  gdb.rs  lib.rs  libc_fetch.rs  main.rs  models.rs  tools.rs
src/mi/: commands.rs  mod.rs  output.rs
src/qemu/: mod.rs
src/ui/: asm.rs  hexdump.rs  mod.rs  registers.rs
tests/: gef_commands.rs  gef_session.rs  inferior_io.rs  issue_regressions.rs  qemu_user.rs
