[package]
authors = ["Lix Zhou <xeontz@gmail.com>", "kimwang906 <kimwang0906bin@gmail.com>"]
description = "A GDB/MI protocol server based on the MCP protocol, providing remote application debugging capabilities"
name = "mcp-server-gdb"
version = "0.3.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/KimWang906/mcp_server_gdb"
homepage = ""
keywords = ["MCP", "tool", "AI", "LLM", "Agent"]
categories = ["command-line-utilities"]
default-run = "mcp-server-gdb"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.12"
schemars = "1.0"
thiserror = "2.0.18"
anyhow = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
clap = { version = "4.5",  features = ["derive"] }
dotenv = "0.15"
rmcp = { version = "0.14.0", features = [
  "client",
  "server",
  "transport-io",
  "transport-child-process",
  "transport-streamable-http-server",
  "transport-streamable-http-client-reqwest",
] }
mcp-server-gdb-macros = { path = "crates/mcp_server_gdb_macros" }
nom = "8.0"
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui = "0.30"
axum = "0.8"
futures = "0.3"
portable-pty = "0.9"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.1", features = ["process", "signal"] }
openssl = { version = "0.10", features = ["vendored"] }

[[bin]]
name = "mcp-server-gdb"
path = "src/main.rs"

[[bin]]
name = "gdb_client"
path = "src/bin/gdb_client.rs"

[[bin]]
name = "test_app"
path = "src/bin/test_app.rs"

[profile.release]
strip = "debuginfo"
lto = "fat"
opt-level = "s"
incremental = false
codegen-units = 1
debug-assertions = false
overflow-checks = false
